; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/BM/extr_bman_low.c_bm_mc_abort.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/BM/extr_bman_low.c_bm_mc_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bm_portal = type { %struct.bm_mc }
%struct.bm_mc = type { i64 }

@mc_user = common dso_local global i64 0, align 8
@mc_idle = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bm_mc_abort(%struct.bm_portal* %0) #0 {
  %2 = alloca %struct.bm_portal*, align 8
  %3 = alloca %struct.bm_mc*, align 8
  store %struct.bm_portal* %0, %struct.bm_portal** %2, align 8
  %4 = load %struct.bm_portal*, %struct.bm_portal** %2, align 8
  %5 = getelementptr inbounds %struct.bm_portal, %struct.bm_portal* %4, i32 0, i32 0
  store %struct.bm_mc* %5, %struct.bm_mc** %3, align 8
  %6 = load %struct.bm_mc*, %struct.bm_mc** %3, align 8
  %7 = getelementptr inbounds %struct.bm_mc, %struct.bm_mc* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @mc_user, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @ASSERT_COND(i32 %11)
  %13 = load %struct.bm_mc*, %struct.bm_mc** %3, align 8
  %14 = call i32 @UNUSED(%struct.bm_mc* %13)
  ret void
}

declare dso_local i32 @ASSERT_COND(i32) #1

declare dso_local i32 @UNUSED(%struct.bm_mc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
